--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <!-- Html Styles -->
-    <link rel="stylesheet" href="{% static 'css/home.css' %}">
+    <link rel="stylesheet" href="{% static 'css/frontend/home.css' %}">
 <div class="container">
     <img class="logo" src="{% static 'img/unnamed.jpg' %}" alt="Logo">
     <p class="text-center">Bienvenido a la aplicación Biométrico.</p>
