--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,16 +1,47 @@
-      /* Estilos base que pueden ir aquí o en main.css */
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f6f8fa;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #1d3557;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        main {
-            padding: 40px;
-        }
+nav {
+    background-color: #2c3e50;
+    padding: 10px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav .logo h1 {
+    font-size: 24px;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: white;
+    margin: 0;
+    padding: 0;
+    align-items: center;
+    justify-content: center;
+}
+
+.logo {
+    flex-shrink: 0;  /* evita que se contraiga */
+}
+
+.logo h1 {
+    white-space: nowrap;  /* evita saltos de línea */
+}
+
+.navbar-links {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    margin: 0;
+    padding: 0;
+}
+
+.navbar-links li a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.navbar-links li a:hover {
+    color: #1abc9c;
+}
