--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -13,9 +13,26 @@
 
 </head>
 <body>
-    <header>
-        <h1>{% block header %}Panel de Control Biométrico{% endblock %}</h1>
-    </header>
+<header>
+    <nav>
+        <a class="logo" href="{% url 'home_biometrico' %}">
+            <h1>{% block header %}Panel de Control Biométrico{% endblock %}</h1>
+        </a>
+
+        <ul class="navbar-links">
+            <li><a href="{% url 'home_biometrico' %}">Inicio</a></li>
+            <li><a href="{% url 'tabla_biometrico' %}">Asistencia</a></li>
+            <li><a href="{% url 'historial_asistencia' %}">Historial</a></li>
+
+            {% if user.is_authenticated %}
+                <li><a href="{% url 'logout' %}">Cerrar sesión ({{ user.username }})</a></li>
+            {% else %}
+                <li><a href="{% url 'login' %}">Iniciar sesión</a></li>
+            {% endif %}
+        </ul>
+    </nav>
+</header>
+
 
     <main>
         {% block content %}
