--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7,7 +7,7 @@ nav {
 }
 
 nav .logo h1 {
-    font-size: 24px;
+    align-items: center;
     font-weight: bold;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -16,8 +16,7 @@ nav .logo h1 {
     color: white;
     margin: 0;
     padding: 0;
-    align-items: center;
-    justify-content: center;
+    
 }
 
 .logo {
@@ -34,6 +33,7 @@ nav .logo h1 {
     gap: 20px;
     margin: 0;
     padding: 0;
+    justify-content: end;
 }
 
 .navbar-links li a {
