--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -15,19 +15,25 @@
 <body>
 <header>
     <nav>
+        <div class="navbar-container">
+            <div class="logo-container">
+                <img src="{% static 'img/unnamed.jpg' %}" alt="Logo">
+                <h1>Entreredes Access</h1>
+            </div>
+            <ul class="navbar-links">
+                <li><a href="{% url 'home_biometrico' %}">Inicio</a></li>
+                <li><a href="{% url 'historial_asistencia' %}">Historial</a></li>
 
-        <ul class="navbar-links">
-            <li><a href="{% url 'home_biometrico' %}">Inicio</a></li>
-            <li><a href="{% url 'historial_asistencia' %}">Historial</a></li>
-
-            {% if user.is_authenticated %}
-                <li><a href="{% url 'logout' %}">Cerrar sesión ({{ user.username }})</a></li>
-            {% else %}
-                <li><a href="{% url 'login' %}">Iniciar sesión</a></li>
-            {% endif %}
-        </ul>
+                {% if user.is_authenticated %}
+                    <li><a href="{% url 'logout' %}">Cerrar sesión ({{ user.username }})</a></li>
+                {% else %}
+                    <li><a href="{% url 'login' %}">Iniciar sesión</a></li>
+                {% endif %}
+            </ul>
+        </div>
     </nav>
 </header>
+
 
 
     <main>
