--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -23,6 +23,7 @@
             <ul class="navbar-links">
                 <li><a href="{% url 'home_biometrico' %}">Inicio</a></li>
                 <li><a href="{% url 'historial_asistencia' %}">Historial</a></li>
+                <li><a href="{% url 'usuarios-list' %}">Usuarios</a></li>
 
                 {% if user.is_authenticated %}
                     <li><a href="{% url 'logout' %}">Cerrar sesión ({{ user.username }})</a></li>
