--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -26,7 +26,14 @@
                 <li><a href="{% url 'usuarios-list' %}">Usuarios</a></li>
 
                 {% if user.is_authenticated %}
-                    <li><a href="{% url 'logout' %}">Cerrar sesión ({{ user.username }})</a></li>
+                    <li>
+                        <form method="post" action="{% url 'logout' %}" style="display: inline;">
+                            {% csrf_token %}
+                            <button type="submit" style="background: none; border: none; color: inherit; cursor: pointer; font: inherit;">
+                                Cerrar sesión ({{ user.username }})
+                            </button>
+                        </form>
+                    </li>
                 {% else %}
                     <li><a href="{% url 'login' %}">Iniciar sesión</a></li>
                 {% endif %}
