--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -9,6 +9,11 @@
     <!-- Bloque para estilos CSS propios de cada template -->
     <link rel="stylesheet" href="{% static 'css/main.css' %}" />
 
+    <!-- En layout/base.html dentro de <head> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+
     {% block extra_css %}{% endblock %}
 
 </head>
@@ -23,7 +28,7 @@
             <ul class="navbar-links">
                 <li><a href="{% url 'home_biometrico' %}">Inicio</a></li>
                 <li><a href="{% url 'historial_asistencia' %}">Historial</a></li>
-                <li><a href="{% url 'usuarios-list' %}">Usuarios</a></li>
+                <li><a href="{% url 'lista_usuarios' %}">Usuarios</a></li>
 
                 {% if user.is_authenticated %}
                     <li>
