--- a/frontend/templates/tabla_biometrico.html
+++ b/frontend/templates/tabla_biometrico.html
@@ -24,14 +24,20 @@
         </div>
 
         <div class="col-md-3">
-            <label for="fecha" class="form-label">Fecha:</label>
-            <input type="date" name="fecha" id="fecha" class="form-control" value="{{ fecha_seleccionada }}">
+            <label for="fecha_inicio" class="form-label">Fecha Inicio:</label>
+            <input type="date" name="fecha_inicio" id="fecha_inicio" class="form-control" value="{{ fecha_inicio }}">
+        </div>
+
+        <div class="col-md-3">
+            <label for="fecha_fin" class="form-label">Fecha Fin:</label>
+            <input type="date" name="fecha_fin" id="fecha_fin" class="form-control" value="{{ fecha_fin }}">
         </div>
 
         <div class="col-md-2 align-self-end">
             <button type="submit" class="btn btn-primary w-100">Filtrar</button>
         </div>
     </form>
+
 
     <h1 class="text-center mb-4">Historial de Asistencia</h1>
 
