--- a/frontend/templates/tabla_biometrico.html
+++ b/frontend/templates/tabla_biometrico.html
@@ -1,6 +1,6 @@
 {% extends 'layout/base.html' %}
 {% load static %}
-
+{% load tz %}
 {% block title %}Historial de Asistencia{% endblock %}
 
 {% block content %}
