REFACTED CREATE USER
Refacted create user

--- a/frontend/templates/usuarios.html
+++ b/frontend/templates/usuarios.html
@@ -109,7 +109,7 @@
 <script>
   function abrirModalCrear() {
     document.getElementById("modalUsuarioLabel").textContent = "Crear Usuario";
-    document.getElementById("formUsuario").action = "/API/usuarios/crear/";
+    document.getElementById("formUsuario").action = "/usuarios/crear/";
     document.getElementById("input_user_id").value = "";
     document.getElementById("input_user_id").readOnly = false; // Editable solo al crear
     document.getElementById("input_nombre").value = "";
