--- a/frontend/templates/usuarios.html
+++ b/frontend/templates/usuarios.html
@@ -29,7 +29,7 @@
         <td>
           <!-- Botón para editar -->
           <button class="btn btn-sm btn-warning" data-bs-toggle="modal" data-bs-target="#modalUsuario"
-              onclick="abrirModalEditar('{{ usuario.user_id.id }}', '{{ usuario.user_id.username|escapejs }}', '{{ usuario.nombre|escapejs }}', '{{ usuario.dni|escapejs }}')"
+              onclick="abrirModalEditar('{{ usuario.user_id.id }}', '{{ usuario.user_id.username|escapejs }}', '{{ usuario.nombre|escapejs }}', '{{ usuario.dni|escapejs }}')">
             Editar
           </button>
           <button class="btn btn-danger btn-sm"
