--- a/frontend/templates/tabla_biometrico.html
+++ b/frontend/templates/tabla_biometrico.html
@@ -52,8 +52,7 @@
                     <th>Entrada</th>
                     <th>Salida</th>
                     <th>Horas Trabajadas</th>
-                    <th>Horas Extras</th>
-                    <th>Aprobado</th>
+                    <th>Horas Extra</th>
                 </tr>
             </thead>
             <tbody>
@@ -74,11 +73,10 @@
                         <td>{{ r.horas_trabajadas }}</td>
                         <td>{{ r.horas_extras }}</td>
                         <td>{{ r.aprobado }}</td>
-                        
+
                     </tr>
-                {% empty %}
-                    <tr>
-                        <td colspan="7" class="text-center text-muted">No hay registros.</td>
+                {% empty %}                    <tr>
+                        <td colspan="8" class="text-center text-muted">No hay registros.</td>
                     </tr>
                 {% endfor %}
             </tbody>
