--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -61,6 +61,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'lista_usuarios' %}">Personal a cargo</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'historial_asistencia' %}">Asistencias</a>
+                            </li>
                         {% endif %}
 
                         <!-- Cerrar sesión -->
