--- a/frontend/templates/no_autorizado.html
+++ b/frontend/templates/no_autorizado.html
@@ -2,5 +2,5 @@
 {% block content %}
     <h1>No autorizado</h1>
     <p>Acceso no autorizado.</p>
-    <p><a href="{% url 'home' %}" class="btn btn-primary">Volver al inicio</a></p>
+    <p><a href="{% url 'home_biometrico' %}" class="btn btn-primary">Inicio</a></p>
 {% endblock %}
